--- a/todo-list/public/index.html
+++ b/todo-list/public/index.html
@@ -22,6 +22,10 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" />
+    <style>
+      a { cursor: pointer; }
+    </style>
     <title>React App</title>
   </head>
   <body>
